--- a/manifest.json
+++ b/manifest.json
@@ -11,10 +11,10 @@
         {
             "matches": ["https://*.google.com/search?*", "https://*.google.co.jp/search?*"],
             "css": ["app.css"],
-            "js": ["app.js"]
+            "js": ["inject.js"]
         }
     ],
     "web_accessible_resources": [
-        "app.html"
+        "app.html", "app.js"
     ]
 }
